--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Header Section -->
-    <section class="header bg-primary bg-gradient text-light p-5">
+    <section class="container-fluid bg-dark text-light p-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -28,30 +28,51 @@
     <!-- End Header Section -->
 
     <!-- Main Section -->
-    <section class="container-fluid">
-        <div class
-        <div class="row">
-            <div class="col-md-3 bg-light">
-                <h5 class="mt-3">Search for the City: </h5>
-            </div>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-
-
-            <div class="col-md-9">
-                <div class="card-body">
-                    <h5 class="card-title">Weather</h5>
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3 bg-secondary">
+                    <h3 class="mt-3">Search for the City: </h3>
+                    <form class="form-inline p-md-2">
+                        <input class="form-control mr-sm-2" id="enter-city type="search" placeholder="Enter a city" aria-label="Enter a city">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
                 </div>
+            
+                <div class="col-lg-9">
+                    <div class="row mr-0">
+                        <div class="col-lg-11 card m-3 d-none" id="today-weather">
+                            <div class="card-body">
+                                <h3 id="city-name" class="city-name align-middle"></h3>
+                                <img id="current-pic" alt="">
+                                <p id="temperature"></p>
+                                <p id="humidity"></p>
+                                <p id="wind-speed"></p>
+                                <p id="UV-index"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row d-none" id="fiveday-header">
+                        <div class="col-12">
+                            <h3> Next 5-Day Forecast</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                    </div>
                 </div>
             </div>
+        </div>
     </section>
 
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
-<script src="./assets/script.js"></script>
+
 
 </html>
