--- a/index.html
+++ b/index.html
@@ -31,19 +31,27 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-3 bg-secondary">
-                    <h3 class="mt-3">Search for the City: </h3>
+                <div class="col bg-light">
+                    <h3 class="mt-3">Search Location: </h3>
                     <form class="form-inline p-md-2">
-                        <input class="form-control mr-sm-2" id="enter-city type="search" placeholder="Enter a city" aria-label="Enter a city">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
+                        <div id="citySearch" class="input-group">
+                            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                            <button id="searchButton" type="button" class="btn btn-outline-primary btn-l">search</button>
+                          </div>
+                    </form>   
+                    <div class="form-inline p-md-2">
+                        <div class="input-group">
+                            <button id="clearButton" class="btn btn-primary btn-lg btn-block" type="button" id="clear-history">Clear history</button>
+                        </div>
+                    <form id="history"></form>
+                    </div>       
                 </div>
             
-                <div class="col-lg-9">
+                <div class="col-md-9">
                     <div class="row mr-0">
                         <div class="col-lg-11 card m-3 d-none" id="today-weather">
                             <div class="card-body">
-                                <h3 id="city-name" class="city-name align-middle"></h3>
+                                <h3 id="selectedCity" class="selectedCity align-middle"></h3>
                                 <img id="current-pic" alt="">
                                 <p id="temperature"></p>
                                 <p id="humidity"></p>
