First Function block

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                     <form class="form-inline p-md-2">
                         <div id="citySearch" class="input-group">
                             <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-                            <button id="searchButton" type="button" class="btn btn-outline-primary btn-l">search</button>
+                            <button id="searchButton" type="button" class="btn btn-outline-success btn-l">search</button>
                           </div>
                     </form>   
                     <div class="form-inline p-md-2">
                         <div class="input-group">
-                            <button id="clearButton" class="btn btn-primary btn-lg btn-block" type="button" id="clear-history">Clear history</button>
+                            <button id="clearButton" class="btn btn-sm btn-primary btn-lg btn-block" type="button" id="clear-history">Clear history</button>
                         </div>
                     <form id="history"></form>
                     </div>       
