--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 <div class="col bg-light">
                     <h3 class="mt-3">Search Location: </h3>
                     <form class="form-inline p-md-2">
-                        <div id="citySearch" class="input-group">
-                            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                        <div id="enter-city" class="input-group">
+                            <input id="searchBarInput" type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
                             <button id="searchButton" type="button" class="btn btn-outline-success btn-l">search</button>
                           </div>
                     </form>   
                     <div class="form-inline p-md-2">
                         <div class="input-group">
-                            <button id="clearButton" class="btn btn-sm btn-primary btn-lg btn-block" type="button" id="clear-history">Clear history</button>
+                            <button id="clear-history" class="btn btn-sm btn-primary btn-lg btn-block" type="button" id="clear-history">Clear history</button>
                         </div>
                     <form id="history"></form>
                     </div>       
@@ -51,7 +51,7 @@
                     <div class="row mr-0">
                         <div class="col-lg-11 card m-3 d-none" id="today-weather">
                             <div class="card-body">
-                                <h3 id="selectedCity" class="selectedCity align-middle"></h3>
+                                <h3 id="city-name" class="city-name align-middle"></h3>
                                 <img id="current-pic" alt="">
                                 <p id="temperature"></p>
                                 <p id="humidity"></p>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="row d-none" id="fiveday-header">
                         <div class="col-12">
-                            <h3> Next 5-Day Forecast</h3>
+                            <h3>Next 5-Day Forecast</h3>
                         </div>
                     </div>
                     <div class="row">
